# PriceRiot

./: CMakeLists.txt  README.md  merged_sales_doc.csv  requirements.txt  setup.py
src/cxx/include/: products.h  sim.h
src/cxx/src/: main.cpp  module.cpp  products.cpp  sim.cpp
src/python/: data_processing.py  main.py
src/python/data/processed/: category_stats.csv  customer_churn_processed.csv  customer_info.csv  customer_stats.csv  merged_sales.csv  retail_sales_processed.csv  transaction_info.csv
src/python/data/raw/: customer_stats.csv  online_retail_customer_churn.csv  retail_sales_dataset.csv
